[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ini_class_parser"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "Parser for class configuration INI files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "configparser>=5.0.0",
    "black",
    "flake8",
    "mypy",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-sugar"  # Optional but helpful for better test output
]

[tool.hatch.build.targets.wheel]
packages = ["src/ini_class_parser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"